@@ -1,3 +1,9 @@
+2007-02-04  Adam Piatyszek  <ediap@users.sourceforge.net>
+	
+	* itpp/base/itassert.h, itpp/base/itassert.cpp: Added
+	it_info_no_endl() and it_info_no_endl_debug() macros, which does
+	not append "std::endl" at the end of message.
+	
 2007-02-03  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* itpp/base/algebra/ls_solve.cpp: Minor fixes to prevent "unused
